syntax = "proto3";

option go_package = "github.com/ts-new/proto/model";

package model;

// User service.
service UserService {
    // Register a new user.
    rpc Register(User) returns (User) {}
    
    // Update password of an existing user.
    rpc ChangePassword(User) returns (User) {}

    // Update address/name/etc of an exiting user.
    rpc UserInfoUpdate(User) returns (User) {}

    // Delete user.
    rpc UserDelete(User) returns (User) {}

    // Read user details.
    rpc GetUser(User) returns (User) {}
}

message UUID {
  bytes value = 1;
}

// Represents user
message User {
    // User Name
    string name = 1;
    // User's Lastname
    string lastName = 2;
    // 1st Address string
    string address1 = 3;
    // 2nd address string
    string address2 = 4;
    // City Name
    string cityName = 5;
    // State
    string state = 6;
    // Email address
    string email = 7;
    // Mobile Number
    string mobileNumber = 8;
    // City Index in Global City Index list.
    int64 cityIndex = 9;
    // ID
    UUID   uuid = 10;
    // Password
    string password = 11;
}
